[package]
name = "eagle_eyes"
version = "0.1.0"
authors = ["atom"]
edition = "2018"

[[bin]]
name = "capture"
path = "src/capture.rs"

[lib]
name = "protocol"
path = "src/protocol/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.8", features = [] }
