[package]
name = "eagle_eyes"
version = "0.1.0"
authors = ["lsh", "atom"]
edition = "2018"

[[bin]]
name = "capture"
path = "src/bin/capture.rs"

[[bin]]
name = "from_file"
path = "src/bin/from_file.rs"

[lib]
name = "eagleeyes"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.8", features = [] }
