[package]
name = "protocol-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

# Depend on the local Rust library exposing protocol headers/utilities
[dependencies.eagleeyes]
package = "eagle_eyes"
path = "../.."

[features]
default = []
